🐛 fix content overflow in hierarchy list block

--- a/style/index.css
+++ b/style/index.css
@@ -2,11 +2,12 @@ body {
     margin: 0;
     padding: 0;
     color: rgb(55, 53, 47);
-    font-family: Helvetica, Tahoma, Arial, "source han sans", STXihei, "华文细黑", Heiti, "黑体", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+
 code {
-    font-family: Source Code Pro, Consolas, Liberation Mono, Menlo, Courier, monospace;
+    font-family: "Source Code Pro", Consolas, Courier, -apple-system, "Microsoft YaHei", monospace;
 }
 
 a {
